added preload for images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 }
 
         </style>
+        <link rel="preload" href="assets/down.png" as="image">
+        <link rel="preload" href="assets/down2.png" as="image">
+        <link rel="preload" href="assets/up.png" as="image">
+        <link rel="preload" href="assets/up2.png" as="image">
     </head>
     <body>
         <img id="main" src="assets/up.png"/>
